--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iamacup/react-native-markdown-display.git"
+    "url": "git+https://github.com/Gen-OS/react-native-markdown-display.git"
   },
   "keywords": [
     "react",
@@ -22,28 +22,27 @@
     "commonmark",
     "markdown-it"
   ],
-  "author": "Mient-jan Stelling and Tom Pickard + others from the community",
+  "author": "Mient-jan Stelling and Tom Pickard + others from the community + Gen-OS",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/iamacup/react-native-markdown-display/issues"
+    "url": "https://github.com/Gen-OS/react-native-markdown-display/issues"
   },
-  "homepage": "https://github.com/iamacup/react-native-markdown-display/",
+  "homepage": "https://github.com/Gen-OS/react-native-markdown-display/",
   "dependencies": {
-    "css-to-react-native": "^3.0.0",
-    "markdown-it": "^10.0.0",
-    "prop-types": "^15.7.2",
-    "react-native-fit-image": "^1.5.5"
+    "css-to-react-native": "^3.2.0",
+    "markdown-it": "^14.1.0",
+    "prop-types": "^15.8.1"
   },
   "peerDependencies": {
-    "react": ">=16.2.0",
-    "react-native": ">=0.50.4"
+    "react": ">=18.0.0",
+    "react-native": ">=0.73.0"
   },
   "devDependencies": {
-    "@types/markdown-it": "^10.0.1",
-    "@types/react-native": ">=0.50.0",
+    "@types/react-native": ">=0.73.0",
     "@babel/core": "^7.9.6",
     "@babel/runtime": "^7.9.6",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@types/markdown-it": "^14.1.2",
     "@typescript-eslint/parser": "^2.32.0",
     "eslint": "^7.0.0",
     "json-schema": "^0.2.5",
